# HT-implementation

./: CMakeLists.txt  README.md  planarity_inspection_report.txt
docs/: AlgorithmRoadmap.md  EmbeddingPhaseNotes.md  KuratowskiCertificatePlan.md  LinearTimeInvariants.md
include/ht/: Graph.hpp  PlanarityResult.hpp  PlanarityTester.hpp  Types.hpp
src/: Graph.cpp  PlanarityTester.cpp
src/bcc/: BiconnectedComponents.cpp
src/certificate/: DirectLinkTester.cpp  KuratowskiCandidateBuilder.cpp  KuratowskiExtractor.cpp  KuratowskiSubdivisionVerifier.cpp  PathTreeBuilder.cpp  PathTreeQueries.cpp  SegmentForest.cpp  SegmentMetadataBuilder.cpp  WilliamsonBasicCaseDetector.cpp  WilliamsonContextBuilder.cpp  WilliamsonFListBuilder.cpp  WilliamsonKernelBuilder.cpp  WilliamsonSegfoPathBuilder.cpp  WilliamsonSegmentListBuilder.cpp
src/debug/: DebugPrinter.cpp
src/embedding/: EmbeddingValidator.cpp  HTEmbeddingBuilder.cpp
src/preprocess/: ComponentPreprocessor.cpp  PreparedPalmTreeBuilder.cpp
src/strong/: StrongPlanarityTester.cpp
tests/: BiconnectedComponentsTest.cpp  ComponentPreprocessorTest.cpp  DirectLinkTesterTest.cpp  EmbeddingValidatorTest.cpp  GraphTest.cpp  KuratowskiCandidateBuilderTest.cpp  KuratowskiCertificateTest.cpp  KuratowskiSubdivisionVerifierTest.cpp  PathTreeBuilderTest.cpp  PathTreeQueriesTest.cpp  PlanarityPipelineTest.cpp  PreparedPalmTreeBuilderTest.cpp  SegmentMetadataBuilderTest.cpp  StrongPlanarityTest.cpp  TestGraphs.hpp  TestRunner.cpp  TestSupport.hpp  WilliamsonBasicCaseDetectorTest.cpp  WilliamsonContextBuilderTest.cpp  WilliamsonFListBuilderTest.cpp  WilliamsonKernelBuilderTest.cpp  WilliamsonPipelineTest.cpp  WilliamsonSegfoPathBuilderTest.cpp  WilliamsonSegmentListBuilderTest.cpp
tools/: FailureWitnessDebug.cpp  InspectPlanarityResult.cpp
(+33 files in other folders)
